--- a/tests/FScript.Host.Tests/FScript.Host.Tests.fsproj
+++ b/tests/FScript.Host.Tests/FScript.Host.Tests.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="RegexExternsTests.fs" />
     <Compile Include="HashExternsTests.fs" />
     <Compile Include="GuidExternsTests.fs" />
+    <Compile Include="PrintExternsTests.fs" />
     <Compile Include="MapExternsTests.fs" />
     <Compile Include="JsonExternsTests.fs" />
     <Compile Include="XmlExternsTests.fs" />
