--- a/src/FScript.Host/FScript.Host.fsproj
+++ b/src/FScript.Host/FScript.Host.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="PrintExterns.fs" />
     <Compile Include="MapExterns.fs" />
     <Compile Include="ListExterns.fs" />
+    <Compile Include="OptionExterns.fs" />
     <Compile Include="JsonExterns.fs" />
     <Compile Include="XmlExterns.fs" />
     <Compile Include="Registry.fs" />
