--- a/tests/FScript.Host.Tests/FScript.Host.Tests.fsproj
+++ b/tests/FScript.Host.Tests/FScript.Host.Tests.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="GuidExternsTests.fs" />
     <Compile Include="PrintExternsTests.fs" />
     <Compile Include="MapExternsTests.fs" />
+    <Compile Include="OptionExternsTests.fs" />
     <Compile Include="JsonExternsTests.fs" />
     <Compile Include="XmlExternsTests.fs" />
     <Compile Include="Program.fs" />
