--- a/src/FScript/FScript.fsproj
+++ b/src/FScript/FScript.fsproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="CliArgs.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Argu" Version="6.2.5" />
   </ItemGroup>
 
   <ItemGroup>
