--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -3,6 +3,18 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IsPackable>true</IsPackable>
+    <PackageId>MagnusOpera.FScript.Language</PackageId>
+    <Version Condition=" '$(Version)' == '' ">0.0.0</Version>
+    <Authors>Magnus Opera</Authors>
+    <Title>FScript Language Engine</Title>
+    <Description>Embeddable FScript language engine: parser, type inference, and evaluator.</Description>
+    <PackageTags>fscript;language;interpreter;fsharp;ml</PackageTags>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/MagnusOpera/FScript</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/MagnusOpera/FScript.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +30,11 @@
     <Compile Include="Eval.fs" />
     <Compile Include="Pretty.fs" />
     <Compile Include="Library.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\" Link="README.md" />
   </ItemGroup>
 
 </Project>
