add script host invocation api

--- a/src/FScript.Runtime/FScript.Runtime.fsproj
+++ b/src/FScript.Runtime/FScript.Runtime.fsproj
@@ -32,6 +32,7 @@
     <Compile Include="JsonExterns.fs" />
     <Compile Include="XmlExterns.fs" />
     <Compile Include="Registry.fs" />
+    <Compile Include="ScriptHost.fs" />
   </ItemGroup>
 
   <ItemGroup>
