--- a/tests/FScript.Runtime.Tests/FScript.Runtime.Tests.fsproj
+++ b/tests/FScript.Runtime.Tests/FScript.Runtime.Tests.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="OptionExternsTests.fs" />
     <Compile Include="JsonExternsTests.fs" />
     <Compile Include="XmlExternsTests.fs" />
+    <Compile Include="ScriptHostTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
