--- a/src/FScript.Runtime/FScript.Runtime.fsproj
+++ b/src/FScript.Runtime/FScript.Runtime.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
     <PackageId>MagnusOpera.FScript.Runtime</PackageId>
@@ -42,6 +42,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FScript.Language\FScript.Language.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
