--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -12,6 +12,7 @@
     <PackageTags>fscript;language;interpreter;fsharp;ml</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>FScriptIcon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/MagnusOpera/FScript</PackageProjectUrl>
     <RepositoryUrl>https://github.com/MagnusOpera/FScript.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -35,6 +36,8 @@
   <ItemGroup>
     <Content Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" Link="README.md" />
+    <None Include="..\..\FScriptIcon.png" Pack="true" PackagePath="\" Link="FScriptIcon.png" />
+    <None Include="..\..\FScript.png" Pack="true" PackagePath="\" Link="FScript.png" />
   </ItemGroup>
 
 </Project>
