Add #include resolver, file-aware errors, and practical include sample

--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -27,6 +27,7 @@
     <Compile Include="Value.fs" />
     <Compile Include="Lexer.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="IncludeResolver.fs" />
     <Compile Include="TypeInfer.fs" />
     <Compile Include="Eval.fs" />
     <Compile Include="Pretty.fs" />
