Embed protected stdlib prelude and migrate List/Option from externs

--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -28,6 +28,7 @@
     <Compile Include="Lexer.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="IncludeResolver.fs" />
+    <Compile Include="Stdlib.fs" />
     <Compile Include="TypeInfer.fs" />
     <Compile Include="Eval.fs" />
     <Compile Include="Pretty.fs" />
@@ -35,6 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Stdlib/List.fss" />
+    <EmbeddedResource Include="Stdlib/Option.fss" />
     <Content Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" Link="README.md" />
     <None Include="..\..\FScriptIcon.png" Pack="true" PackagePath="\" Link="FScriptIcon.png" />
