Add local-variable hover types and 0.28.0 changelog

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
       ],
       "outFiles": [
         "${workspaceFolder}/vscode-fscript/**/*.js"
-      ]
+      ],
+      "preLaunchTask": "fscript: compile extension"
     }
   ]
 }
