--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -17,6 +17,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Enforce changelog updates on every commit
+        env:
+          REQUIRE_CHANGELOG_ALWAYS: "true"
+        run: .github/scripts/check-unreleased-changelog.sh
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
