--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,12 +1,14 @@
 <Project>
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
+    <ParallelCompilation>true</ParallelCompilation>
+    <Deterministic>false</Deterministic>
     <IsPackable>false</IsPackable>
     <VSTestLogger>trx</VSTestLogger>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <DebugType>embedded</DebugType>
     <Nullable>enable</Nullable>
-    <RuntimeIdentifiers>win-x64;win-arm64;osx-x64;osx-arm64;linux-x64;linux-arm64</RuntimeIdentifiers>
     <Version Condition=" '$(Version)' == '' ">0.0.0</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
