feat(interop): add C# bridge and C# language server host

--- a/src/FScript.LanguageServer/FScript.LanguageServer.fsproj
+++ b/src/FScript.LanguageServer/FScript.LanguageServer.fsproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FScript.Language\FScript.Language.fsproj" />
     <ProjectReference Include="..\FScript.Runtime\FScript.Runtime.fsproj" />
+    <ProjectReference Include="..\FScript.CSharpInterop\FScript.CSharpInterop.fsproj" />
   </ItemGroup>
 
 </Project>
