--- a/tests/FScript.LanguageServer.Tests/FScript.LanguageServer.Tests.fsproj
+++ b/tests/FScript.LanguageServer.Tests/FScript.LanguageServer.Tests.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="LspNavigationTests.fs" />
     <Compile Include="LspSymbolsAndActionsTests.fs" />
     <Compile Include="LspCustomRequestsTests.fs" />
+    <Compile Include="InteropServicesTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -27,6 +28,11 @@
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.11.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\FScript.Language\FScript.Language.fsproj" />
+    <ProjectReference Include="..\..\src\FScript.CSharpInterop\FScript.CSharpInterop.fsproj" />
   </ItemGroup>
 
 </Project>
