feat(lsp-csharp): add native C# server core and tests

--- a/src/FScript.LanguageServer.CSharp/FScript.LanguageServer.CSharp.csproj
+++ b/src/FScript.LanguageServer.CSharp/FScript.LanguageServer.CSharp.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FScript.LanguageServer\FScript.LanguageServer.fsproj" />
+    <ProjectReference Include="..\FScript.CSharpInterop\FScript.CSharpInterop.fsproj" />
   </ItemGroup>
 </Project>
