feat(lsp-csharp): add diagnostics and AST command handlers

--- a/src/FScript.LanguageServer.CSharp/FScript.LanguageServer.CSharp.csproj
+++ b/src/FScript.LanguageServer.CSharp/FScript.LanguageServer.CSharp.csproj
@@ -8,5 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FScript.CSharpInterop\FScript.CSharpInterop.fsproj" />
+    <ProjectReference Include="..\FScript.LanguageServer\FScript.LanguageServer.fsproj" />
   </ItemGroup>
 </Project>
