--- a/tests/FScript.LanguageServer.Tests/FScript.LanguageServer.Tests.csproj
+++ b/tests/FScript.LanguageServer.Tests/FScript.LanguageServer.Tests.csproj
@@ -1,30 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <GenerateProgramFile>false</GenerateProgramFile>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="LspTestWire.fs" />
-    <Compile Include="LspTestClient.fs" />
-    <Compile Include="LspTestFixture.fs" />
-    <Compile Include="LspCoreTests.fs" />
-    <Compile Include="LspCompletionAndSignatureTests.fs" />
-    <Compile Include="LspHoverAndInlayTests.fs" />
-    <Compile Include="LspNavigationTests.fs" />
-    <Compile Include="LspSymbolsAndActionsTests.fs" />
-    <Compile Include="LspCustomRequestsTests.fs" />
-    <Compile Include="InteropServicesTests.fs" />
-    <Compile Include="CSharpServerCoreTests.fs" />
-    <Compile Include="Program.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
-    <PackageReference Include="FsUnit" Version="7.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.11.2" />
@@ -35,5 +18,4 @@
     <ProjectReference Include="..\..\src\FScript.Language\FScript.Language.fsproj" />
     <ProjectReference Include="..\..\src\FScript.CSharpInterop\FScript.CSharpInterop.fsproj" />
   </ItemGroup>
-
 </Project>
