--- a/.github/workflows/on-push-tag.yml
+++ b/.github/workflows/on-push-tag.yml
@@ -75,13 +75,18 @@ jobs:
           BUILD_VERSION_SUFFIX=${BASH_REMATCH[2]}
           echo "BUILD_VERSION_SUFFIX=$BUILD_VERSION_SUFFIX" >> $GITHUB_ENV
 
+      - name: Extract release notes from changelog
+        shell: bash
+        run: |
+          ./.github/scripts/extract-release-notes.sh "${GITHUB_REF_NAME}" > "${RUNNER_TEMP}/release-notes.md"
+
       - name: Create draft GitHub release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
           draft: true
           prerelease: ${{ env.BUILD_VERSION_SUFFIX != '' }}
-          generate_release_notes: true
+          body_path: ${{ runner.temp }}/release-notes.md
           files: |
             .out/*.zip
             .out/*.nupkg
