--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -39,6 +39,7 @@
     <EmbeddedResource Include="Stdlib/List.fss" />
     <EmbeddedResource Include="Stdlib/Option.fss" />
     <EmbeddedResource Include="Stdlib/Map.fss" />
+    <EmbeddedResource Include="Stdlib/Environment.fss" />
     <Content Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" Link="README.md" />
     <None Include="..\..\FScriptIcon.png" Pack="true" PackagePath="\" Link="FScriptIcon.png" />
