feat(cli): add configurable extern loading via provider assemblies

--- a/src/FScript.Runtime/FScript.Runtime.fsproj
+++ b/src/FScript.Runtime/FScript.Runtime.fsproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Compile Include="Types.fs" />
+    <Compile Include="ExternProvider.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="Decode.fs" />
     <Compile Include="FsExterns.fs" />
