--- a/src/FScript.Runtime/FScript.Runtime.fsproj
+++ b/src/FScript.Runtime/FScript.Runtime.fsproj
@@ -36,7 +36,7 @@
 
   <ItemGroup>
     <Content Include="..\..\LICENSE" Pack="true" PackagePath="\" />
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" Link="README.md" />
+    <None Include="..\..\NUGET.md" Pack="true" PackagePath="\" Link="README.md" />
     <None Include="..\..\FScriptIcon.png" Pack="true" PackagePath="\" Link="FScriptIcon.png" />
   </ItemGroup>
 
