feat(language): add executable pipeline and route hosts through compile+execute

--- a/src/FScript.Language/FScript.Language.fsproj
+++ b/src/FScript.Language/FScript.Language.fsproj
@@ -33,6 +33,7 @@
     <Compile Include="BuiltinFunctions.fs" />
     <Compile Include="TypeInfer.fs" />
     <Compile Include="Eval.fs" />
+    <Compile Include="Executable.fs" />
     <Compile Include="Pretty.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
