perf(runtime): generate in-memory invokers for exported script functions

--- a/src/FScript.Runtime/FScript.Runtime.fsproj
+++ b/src/FScript.Runtime/FScript.Runtime.fsproj
@@ -31,6 +31,7 @@
     <Compile Include="JsonExterns.fs" />
     <Compile Include="XmlExterns.fs" />
     <Compile Include="Registry.fs" />
+    <Compile Include="InvocationCompiler.fs" />
     <Compile Include="ScriptHost.fs" />
   </ItemGroup>
 
